[package]
name = "parking_lot_core"
version = "0.3.1"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "An advanced API for creating custom synchronization primitives."
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/parking_lot"
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]

[dependencies]
smallvec = "0.6"
rand = { path = "D:/iotedge/rand" }
petgraph = { version = "0.4.5", optional = true }
thread-id = { version = "3.2.0", optional = true }
backtrace = { path = "D:/iotedge/backtrace-rs", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.27"

[target.'cfg(windows)'.dependencies]
winapi = { path = "D:/iotedge/winapi-rs", features = ["winnt", "ntstatus", "minwindef",
    "winerror", "winbase", "errhandlingapi", "handleapi"] }

[features]
nightly = []
deadlock_detection = ["petgraph", "thread-id", "backtrace"]

[build-dependencies]
rustc_version = "0.2"
